--- a/index.html
+++ b/index.html
@@ -11,37 +11,75 @@
     <!--Fontawesome-->
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
         integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous" />
+    <!--Google Fonts-->
+    <link href="https://fonts.googleapis.com/css?family=Saira+Extra+Condensed:500,700" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Muli:400,400i,800,800i" rel="stylesheet">
     <!--CSS Propio-->
-    <script src="./style.css"></script>
+    <link rel="stylesheet" href="./style.css">
 
     <title>Notes</title>
 </head>
 
 <body>
-    
+    <nav id="navBar" class="navbar navbar-expand-lg barra-navegacion p-5">
+        <h3>NOTAS</h3>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
+            aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+    </nav>
+
+
+
+    <!-- Button trigger modal -->
+    <button type="button" class="btn btn-info m-5" data-toggle="modal" data-target="#exampleModal">
+        Agregar Nota
+    </button>
+
+    <!-- Modal -->
+    <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="exampleModalLabel">Mis Notas</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    <form>
+                        <div class="form-group">
+                            <label for="exampleFormControlInput1">Titulo</label>
+                            <input type="text" class="form-control" id="titleNote"
+                                placeholder="Titulo de la nota" required maxlength="60">
+                        </div>
+                        <div class="form-group">
+                            <label for="exampleFormControlTextarea1">Nota</label>
+                            <textarea class="form-control" id="textAreaNote" rows="3" required maxlength="500"></textarea>
+                            <button type="submit" class="btn btn-primary my-3">Guardar</button>
+                        </div>
+                    </form>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary my-3" data-dismiss="modal">Close</button>
+
+                </div>
+            </div>
+        </div>
+    </div>
 
 
 
 
 
 
+<footer>
+    <div class="container-fluid bg-info p-5 footer">
 
+    </div>
+</footer>
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+    <!--Scripts Bootstrap-->
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
         integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
         crossorigin="anonymous"></script>
@@ -51,6 +89,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js"
         integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s"
         crossorigin="anonymous"></script>
+    <!--Script Propio-->
     <script src="./script.js"></script>
 
 </body>
