agrego estilo, y función onsubmit del form y función para mostar las cards de notas

--- a/index.html
+++ b/index.html
@@ -29,6 +29,16 @@
         </button>
     </nav>
 
+    <div class="container my-3">
+        <div id="tableNotes" class="row">
+            
+
+            
+
+
+
+        </div>
+    </div>
 
 
     <!-- Button trigger modal -->
@@ -47,7 +57,7 @@
                     </button>
                 </div>
                 <div class="modal-body">
-                    <form>
+                    <form id="formNotes">
                         <div class="form-group">
                             <label for="exampleFormControlInput1">Titulo</label>
                             <input type="text" class="form-control" id="titleNote"
@@ -62,7 +72,6 @@
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-secondary my-3" data-dismiss="modal">Close</button>
-
                 </div>
             </div>
         </div>
@@ -74,7 +83,7 @@
 
 
 <footer>
-    <div class="container-fluid bg-info p-5 footer">
+    <div class="container-fluid bg-info footer">
 
     </div>
 </footer>
