--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             <div class="col-6">
                 <form id="searchForm" class="form-inline my-2 my-lg-0">
                     <input id="searchInput" class="form-control mr-sm-2" type="search" placeholder="Ingrese su busqueda" aria-label="Search">
-                    <button class="btn btn-outline-info my-2 my-sm-0" type="submit" onclick="displaySearchNotes()"><i class="fas fa-search"></i></button>
+                    <button class="btn btn-outline-info my-2 my-sm-0" type="submit" onclick="displayAllNotes()"><i class="fas fa-search"></i></button>
                 </form>
             </div>
         </div>
