agrego pagina para loguear con un usuario

--- a/index.html
+++ b/index.html
@@ -39,9 +39,9 @@
             </div>
             <div class="col-m-4 mx-auto">
                 <!-- Button trigger modal Create Category -->
-                <button type="button" class="btn btn-secondary" data-toggle="modal" data-target="#modalAddCategory">
+                <!-- <button type="button" class="btn btn-secondary" data-toggle="modal" data-target="#modalAddCategory">
                     Agregar Categoría
-                </button>
+                </button> -->
             </div>
             <div class="col-m-4 mx-auto">
                 <form id="searchForm" class="form-inline my-2 my-lg-0">
@@ -139,7 +139,7 @@
     </div>
 
     <!-- Modal Create Category -->
-    <div class="modal fade" id="modalAddCategory" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <!-- <div class="modal fade" id="modalAddCategory" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
         <div class="modal-dialog">
             <div class="modal-content">
                 <div class="modal-header">
@@ -162,15 +162,15 @@
                 </form>
             </div>
         </div>
-    </div>
-
+    </div> -->
 
 
 <footer>
     <div class="container-fluid bg-info footer">
-
+    
     </div>
 </footer>
+
 
     <!--Scripts Bootstrap-->
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
