--- a/login.html
+++ b/login.html
@@ -7,35 +7,49 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
-    
+    <!--Fontawesome-->
+    <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
+        integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous" />
+    <!--Google Fonts-->
+    <link href="https://fonts.googleapis.com/css2?family=Gloria+Hallelujah&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Architects+Daughter&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Anton&family=Architects+Daughter&display=swap" rel="stylesheet">
     <!--CSS Propio-->
     <link rel="stylesheet" href="./style.css">
+    <link rel="icon" href="./img/logo note.png" type="image/x-icon">
     <title>Notes Login</title>
 </head>
-<body class="img-fondo">
+<body class="img-fondo body-style">
 
     <div id="login" class="container">
         <div class="row">
-            <div class="col-md-6 logo-position">
-                <h3 class="text-light">Logo</h3>
-            </div>
+                <img src="./img/logo note.png" class="logo-note logo-position"alt="">
+                <h5 class="text-position text-light">App Bloc de Notas</h5>
             <form class="col-md-6 card p-5 form-position" id="formLogin">
                 <div id="alerta" class="alert alert-danger d-none" role="alert">
                     ¡Datos Inválidos, intente nuevamente!
                 </div>
                 <div class="form-group">
-                    <label class="float-left" for="usuario">
-                        Usuario
-                    </label>
-                    <input type="text" id="usuario" class="form-control" placeholder="Nombre de usuario" required>
+                    <label class="float-left" for="usuario">Usuario</label>
+                    <div class="input-group mb-3">
+                        <div class="input-group-prepend">
+                            <span class="input-group-text" id="basic-addon1"><i class="fas fa-user"></i></span>
+                        </div>
+                        <input type="text" id="usuario" class="form-control" placeholder="Nombre de usuario" required>
+                    </div>
                 </div>
+
+
                 <div class="form-group">
-                    <label class="float-left" for="password">
-                        Contraseña
-                    </label>
-                    <input type="password" id="password" class="form-control" placeholder="Ingrese la Contraseña" required>
+                    <label class="float-left" for="password">Contraseña</label> 
+                    <div class="input-group mb-3">
+                        <div class="input-group-prepend">
+                            <span class="input-group-text" id="basic-addon1"><i class="fas fa-lock"></i></span>
+                        </div>
+                        <input type="password" id="password" class="form-control" placeholder="Ingrese la Contraseña" required>
+                    </div>
                 </div>
-                <button type="submit" class="btn btn-primary mt-4">
+                <button type="submit" class="btn btn-secondary mt-4">
                     Ingresar
                 </button>
                 <a type="link" class="mt-4" data-toggle="modal" data-target="#modalCreateAccount">
