mas ajustes css

--- a/login.html
+++ b/login.html
@@ -24,7 +24,7 @@
     <div id="login" class="container">
         <div class="row">
                 <img src="./img/logo note.png" class="logo-note logo-position"alt="">
-                <h5 class="text-position text-light">App Bloc de Notas</h5>
+                <h5 class="text-position text-light titulo">App Bloc de Notas</h5>
             <form class="col-md-6 card p-5 form-position" id="formLogin">
                 <div id="alerta" class="alert alert-danger d-none" role="alert">
                     ¡Datos Inválidos, intente nuevamente!
