ajustes medias queries

--- a/login.html
+++ b/login.html
@@ -85,7 +85,7 @@
                         </label>
                         <input type="password" id="passwordCreateAccount" class="form-control" placeholder="Ingrese la Contraseña" required>
                     </div> 
-                    <button type="submit" class="btn btn-info mt-4">Guardar</button>
+                    <button type="submit" class="btn add-botons mt-4">Guardar</button>
                 </form>
             </div>
         </div>
