--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 </head>
 
 <body class="body-style">
-    <nav id="navBar" class="navbar navbar-expand-lg barra-navegacion p-5 img-fondo">
+    <nav id="navBar" class="navbar navbar-expand-lg barra-navegacion p-3 img-fondo">
         <img src="./img/logo note.png" class="logo-note" alt="">
         <h4 class="text-light titulo">App Bloc de Notas</h4>
         <button class="btn btn-secondary btn-back-login" onclick="backlogin()"><i class="far fa-arrow-alt-circle-left mr-3"></i>Login</button>
@@ -51,7 +51,7 @@
                 </button>
             </div>
             <div class="col-m-4 mx-auto">
-                <form id="searchForm" class="form-inline my-2 my-lg-0">
+                <form id="searchForm" class="form-inline mt-5 my-lg-0">
                     <input id="searchInput" class="form-control mr-sm-2" type="search" placeholder="Ingrese su busqueda"
                         aria-label="Search">
                     <button class="btn btn-outline-secondary my-2 my-sm-0" type="submit" onclick="displayAllNotes()"><i
