--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
                         </div>
                         <div class="form-group">
                             <label for="exampleFormControlSelect1">Seleccionar Categoría</label>
-                            <select class="form-control" id="selectCategories" required>
+                            <select class="form-control" id="selectCategoriesEdit" required>
 
                             
 
